--- a/app/src/main/res/layout/activity_maps_view.xml
+++ b/app/src/main/res/layout/activity_maps_view.xml
@@ -19,14 +19,15 @@
             android:id="@+id/iconBack"
             android:layout_alignParentStart="true"
             android:src="@drawable/frame_2"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="5dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"/>
 
         <TextView
             android:layout_toEndOf="@+id/iconBack"
             android:textColor="@color/white"
-            android:textSize="18sp"
+            android:textSize="14sp"
+            android:fontFamily="@font/poppins_semibold"
             android:gravity="center_vertical"
             android:text="Maps Desa Wisata Bambu"
             android:layout_width="match_parent"
