--- a/app/src/main/res/layout/activity_detail_produk.xml
+++ b/app/src/main/res/layout/activity_detail_produk.xml
@@ -33,6 +33,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/kontenProduk"
+        android:visibility="gone"
         android:layout_below="@id/navbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -121,6 +123,8 @@
     </LinearLayout>
 
     <FrameLayout
+        android:id="@+id/kontenImage"
+        android:visibility="gone"
         android:layout_alignParentBottom="true"
         android:layout_weight="1"
         android:layout_width="match_parent"
@@ -157,7 +161,7 @@
         android:layout_height="50dp"/>
 
     <TextView
-        android:id="@+id/textLoading"
+        android:id="@+id/txtLoading"
         android:layout_centerInParent="true"
         android:layout_below="@+id/progressBar"
         android:layout_marginTop="5dp"
