--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
+        android:visibility="gone"
         android:id="@+id/appBar"
         android:background="@color/primary"
         android:gravity="center_vertical"
@@ -50,6 +51,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/kontenMain"
         android:layout_below="@+id/appBar"
         android:orientation="vertical"
@@ -201,7 +203,6 @@
         android:layout_centerInParent="true"
         android:layout_below="@+id/progressBar"
         android:layout_marginTop="5dp"
-        android:text="Loading.."
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 </RelativeLayout>
