--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,73 +8,98 @@
     android:background="@drawable/bg_onboarding"
     tools:context=".Onboarding">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_285sdp"
-        android:scaleType="fitXY"
-        android:src="@drawable/foto_onboarding" />
-
     <LinearLayout
-        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:layout_alignParentTop="true"
+        android:id="@+id/kontenOnboarding"
         android:orientation="vertical"
-        android:layout_marginVertical="20dp"
-        android:paddingHorizontal="30dp"
-        android:layout_height="wrap_content">
-        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
             android:layout_width="match_parent"
-            android:text="Desa Wisata Bambu"
-            android:layout_marginTop="@dimen/_5sdp"
-            android:fontFamily="@font/poppins_bold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="24sp"
-            android:maxLines="1"
-            android:layout_height="wrap_content"/>
+            android:layout_height="@dimen/_285sdp"
+            android:scaleType="fitXY"
+            android:src="@drawable/foto_onboarding" />
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:text="KARANGASEM"
-            android:fontFamily="@font/poppins_extrabold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="36sp"
-            android:padding="0dp"
-            android:maxLines="1"
-            android:layout_height="wrap_content"/>
+            android:orientation="vertical"
+            android:layout_marginVertical="20dp"
+            android:paddingHorizontal="30dp"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Desa Wisata Bambu"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:fontFamily="@font/poppins_bold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="24sp"
+                android:maxLines="1"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:text="Dukungan kita untuk pesona"
-            android:fontFamily="@font/poppins_semibold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:layout_marginTop="5dp"
-            android:textSize="20sp"
-            android:maxLines="2"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="KARANGASEM"
+                android:fontFamily="@font/poppins_extrabold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="36sp"
+                android:padding="0dp"
+                android:maxLines="1"
+                android:layout_height="wrap_content"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:text="wisata lokal yang gemilang."
-            android:fontFamily="@font/poppins_semibold"
-            android:textColor="@color/black"
-            android:textAlignment="center"
-            android:textSize="20sp"
-            android:maxLines="2"
-            android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="Dukungan kita untuk pesona"
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:layout_marginTop="5dp"
+                android:textSize="20sp"
+                android:maxLines="2"
+                android:layout_height="wrap_content"/>
 
-        <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:id="@+id/buttonLogin"
-            android:background="@drawable/bg_rounded"
-            android:backgroundTint="@color/primary"
-            android:backgroundTintMode="add"
-            android:layout_marginHorizontal="50dp"
-            android:layout_marginTop="@dimen/_30sdp"
-            android:text="Mulai"
-            android:fontFamily="@font/poppins_semibold"
-            android:textSize="18sp"
-            android:layout_height="50dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="wisata lokal yang gemilang."
+                android:fontFamily="@font/poppins_semibold"
+                android:textColor="@color/black"
+                android:textAlignment="center"
+                android:textSize="20sp"
+                android:maxLines="2"
+                android:layout_height="wrap_content"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:id="@+id/buttonLogin"
+                android:background="@drawable/bg_rounded"
+                android:backgroundTint="@color/primary"
+                android:backgroundTintMode="add"
+                android:layout_marginHorizontal="50dp"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:text="Mulai"
+                android:fontFamily="@font/poppins_semibold"
+                android:textSize="18sp"
+                android:layout_height="50dp"/>
+        </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:indeterminateTint="@color/bg_warna"
+        android:layout_centerInParent="true"
+        android:layout_width="50dp"
+        android:layout_height="50dp"/>
+
+    <TextView
+        android:text="Loading..."
+        android:visibility="visible"
+        android:id="@+id/txtLoading"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/progressBar"
+        android:layout_marginTop="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+</RelativeLayout>
